k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: students-create-service
spec:
  selector:
    app: students-create
  ports:
    - protocol: TCP
      port: 8081  # Puerto interno dentro del cluster
      targetPort: 8080 # Puerto que expone el contenedor
      nodePort: 30081
  type: NodePort
